fix2 index.jte